--- a/ejercicio.html
+++ b/ejercicio.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
+    <title>Mesada</title>
     <!-- Modificar ruta -->
-    <script src="./02_Arreglos/02.js"></script>
+    <script src="./ejercicio.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
 </body>
 </html>
