--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
+    <title>Ejercicio 2</title>
     <!-- Modificar ruta -->
-    <script src="./02_Arreglos/02.js"></script>
+    <script src="./ejercicio2.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
 </body>
 </html>
