--- a/pruebas.html
+++ b/pruebas.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
     <!-- Modificar ruta -->
-    <script src="./01_Variables/01.js"></script>
+    
+    <script src="03_Objetos/05.js"></script>
 </head>
 <body>
     <h1>Pruebas</h1>
