--- a/pruebas.html
+++ b/pruebas.html
@@ -6,7 +6,7 @@
     <title>Pruebas</title>
     <!-- Modificar ruta -->
     
-    <script src="03_Objetos/05.js"></script>
+    <script src="04_Condicionales/02.js"></script>
 </head>
 <body>
     <h1>Pruebas</h1>
