--- a/ejercicioc.html
+++ b/ejercicioc.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
     <!-- Modificar ruta -->
-    <script src="./05_Ciclos/01.js"></script>
+    <script src="./ejericio ciclos.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
+    <h1>Ciclos</h1>
 </body>
 </html>
