--- a/pruebas.html
+++ b/pruebas.html
@@ -6,7 +6,7 @@
     <title>Pruebas</title>
     <!-- Modificar ruta -->
     
-    <script src="exam.js"></script>
+    <script src="05_Ciclos/02.js"></script>
 </head>
 <body>
     <h1>Pruebas</h1>
