--- a/pruebas.html
+++ b/pruebas.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
     <!-- Modificar ruta -->
-    <!-- <script src="./04_Condicionales/04.js"></script> -->
-    <script src="./efor.js"></script>
+    <script src="./05_Ciclos/02.js"></script>
+    <!-- <script src="./efor.js"></script> -->
 </head>
 <body>
     <h1>Pruebas</h1>
