--- a/challenge.html
+++ b/challenge.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
+    <title>Reto</title>
     <!-- Modificar ruta -->
-    <script src="./06_Funciones/04.js"></script>
+    <script src="./challenge.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
+    <h1>Prueba de reto</h1>
 </body>
 </html>
