--- a/pruebas.html
+++ b/pruebas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
     <!-- Modificar ruta -->
-    <script src="./examen/01.js"></script>
+    <script src="./02_arreglos/arreglos.js"></script>
 </head>
 <body>
     <h1>Pruebas</h1>
