--- a/repaso arreglos.html
+++ b/repaso arreglos.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas</title>
+    <title>Repaso</title>
     <!-- Modificar ruta -->
-    <script src="./06_Funciones/05.js"></script>
+    <script src="./repaso arreglos.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
+    <h1>Repaso de arreglos</h1>
 </body>
 </html>
