--- a/07_DOM/01.html
+++ b/07_DOM/01.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruebas</title>
     <!-- Modificar ruta -->
-    <script src="./06_Funciones/06.js"></script>
+    <script src="./01.js"></script>
 </head>
 <body>
-    <h1>Pruebas</h1>
+    <h1>Pruebando DOM</h1>
+    <button id="¿Por qué?" onclick="activar()">Probanding</button>
 </body>
 </html>
