--- a/challenge.html
+++ b/challenge.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto</title>
     <!-- Modificar ruta -->
-    <script src="./challenge.js"></script>
+    <script src="./07_DOM/01.js"></script>
 </head>
 <body>
-    <h1>Prueba de reto</h1>
+    <h1>DOM</h1>
+      Preg1: <input type= "text" name= "pregu1" value= "¿Por qué?">
+      Preg2: <input type= "text" name= "pregu2" value= "¿Por qué?">
+      Preg3: <input type= "text" name= "pregu3" value= "¿Por qué?">
+      Preg4: <input type= "text" name= "pregu4" value= "¿Por qué?">
+      Preg5: <input type= "text" name= "pregu5" value= "¿Por qué?">
+    <button onclick="theFunction()">Las preguntas</button>
+    <p id="pre"></p>
 </body>
 </html>
