si!!!! lo logre!!!!!!

--- a/07_DOM/01.html
+++ b/07_DOM/01.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Los 5 porques</title>
+    <title>Los 5 porques/Crecer botón</title>
+    <link rel="stylesheet" href="./01.css">
     <script src="./01.js"></script>
   </head>
   <body>
@@ -11,6 +12,9 @@
     <p id="porquee"></p>
     <p></p>
     <p></p>
-    <button type="button" onclick="FuncionMasGrande()" id="MasGrande" name="button">Haz click</button>
+    <div class="caja">
+      <button type="button" onclick="Crecer()" id="MasGrande" name="button">Haz click</button>
+    </div>
+    <button type="button" onclick="FuncionMasGrande()" id="masGrande" name="boton">:O</button>
   </body>
 </html>
