--- a/07_DOM/tabla.html
+++ b/07_DOM/tabla.html
@@ -13,7 +13,7 @@
 
 
 <body>
-    <h1>Boleta de Calificaciones</h1>
+    <h1>Tablas</h1>
     <h1></h1>
 
     <table id="tabla" BORDER CELLPADDING=10px CELLSPACING=0px>
