--- a/PruebaDom.html
+++ b/PruebaDom.html
@@ -9,17 +9,17 @@
   <body>
     <button type="button" name="button" class="botoncolor" onclick="cambiarColor()" id="coloralboton">Cambiar color</button>
     <button type="button" name="button" class="botonfila" onclick="agregarFila()" id="masfila">Agregar fila</button>
-    <table class="tabla" id="cambios">
+    <table class="tabla" id="tabla">
       <tr>
         <!-- el tr son las filas -->
         <!-- el th son los encabezados -->
         <!-- el td son las otras celdas -->
         <th>Fila 1</th>
-        <th>Fila 1</th>
+        <th>Fila 2</th>
       </tr>
       <tr>
-        <td>Nombre:Diana</td>
-        <td>Nombre:Diana</td>
+        <td>Nombre</td>
+        <td>Apellido</td>
       </tr>
     </table>
   </body>
