--- a/FormularioInputs.html
+++ b/FormularioInputs.html
@@ -7,13 +7,20 @@
   </head>
   <body>
     <form>
-      <h1>ESENCIALES</h1>
+      <h1 class="linea">ESENCIALES</h1>
       <div class="cajita">
         <h3>Input Button</h3>
+        <input type="button" onclick="alert('Hello World!')" value="Click Me!">
       </div>
       <br></br>
       <div class="cajita">
         <h3>Input Checkbox</h3>
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <label for="vehicle1"> I have a bike</label><br>
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+        <label for="vehicle2"> I have a car</label><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> I have a boat</label>
       </div>
       <br></br>
       <div class="cajita">
@@ -26,6 +33,13 @@
       <br></br>
       <div class="cajita">
         <h3>Input Radio</h3>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male">Male</label><br>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female">Female</label><br>
+        <input type="radio" id="other" name="gender" value="other">
+        <label for="other">Other</label>
+        <button type="button" onclick="cambiarSeleccion()">Toca para cambiar</button>
       </div>
       <br></br>
       <div class="cajita">
@@ -47,13 +61,43 @@
       <br></br>
       <div class="cajita">
         <h3>Input Reset</h3>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="John"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="submit" value="Submit">
+        <input type="reset">
       </div>
       <br></br>
       <div class="cajita">
         <h3>Input Hidden</h3>
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <input type="hidden" id="custId" name="custId" value="3487">
+        <input type="submit" value="Submit">
       </div>
-      <h1>EXTRAS</h1>
+      <div class="cajita">
+        <h3>Input Color</h3>
+        <label for="favcolor">Select your favorite color:</label>
+        <input type="color" id="favcolor" name="favcolor">
+      </div>
+      <h1 class="lineas">EXTRAS</h1>
     </form>
     <script src="./FormularioInputs.js"></script>
   </body>
 </html>
+
+
+
+
+
+<!-- <input type="button"> -->
+<!-- <input type="checkbox"> -->
+<!-- <input type="color"> -->
+<!-- <input type="hidden"> -->
+<!-- <input type="password"> -->
+<!-- <input type="radio"> COMPLETADO-->
+<!-- <input type="reset"> -->
+<!-- <input type="text"> -->
+<!-- <input type="submit"> -->
+ <!-- type="text/javascript" -->
