--- a/Tabladecolores.html
+++ b/Tabladecolores.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla de colores</title>
     <!-- Modificar ruta -->
-    <script src="./Tabladecolores.js"></script>
     <link rel="stylesheet" href="./Tabladecolores.css">
 </head>
 <body>
@@ -27,4 +26,6 @@
   </table>
   <p></p>
   <button type="button" name="button" onclick="Cambiar()">Cambiar el color</button>
+  <button type="button" name="button" onclick="Agregar()">Agregar filas</button>
+  <script src="./Tabladecolores.js"></script>
 </body>
