--- a/07_DOM/02.html
+++ b/07_DOM/02.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablas</title>
     <!-- Modificar ruta -->
-    <link href="./tabla.css" rel="stylesheet" type="text/css">
-    <script src="./tabla.js"></script>
+    <link href="./02.css" rel="stylesheet" type="text/css">
+    <script src="./02.js"></script>
 </head>
 
 
@@ -19,9 +19,9 @@
     <table id="tabla" BORDER CELLPADDING=10px CELLSPACING=0px>
 
         <tr>
-            <th id = "c1">HOLA </th>
-            <td id = "c2">HOLA</td>
-            <td id = "c3">HOLA</td>
+            <th id ="c1">HOLA </th>
+            <td id ="c2">HOLA</td>
+            <td id ="c3">HOLA</td>
         </tr>
 
         <tr>
