--- a/07_DOM/registro.html
+++ b/07_DOM/registro.html
@@ -8,6 +8,16 @@
   <body>
     <h1 class="welcome">BIENDVENIDO!!!</h1>
     <h1 class="welcome">¿Listo para registrarte?</h1>
+    <div class="cajitaPuntas">
+      <img class="puntasBallet" src="https://i.pinimg.com/564x/30/63/f1/3063f137bae78cb51fb376a61db9643b.jpg" alt="Puntas">
+    </div><br>
+    <div class="registro">
+      <label for="fname" class="dato">First name:</label><br>
+      <input type="text" id="fname" name="fname" value="Johnny" class="ingreso"><br>
+      <label for="lname" class="dato">Last name:</label><br>
+      <input type="text" id="lname" name="lname" value="Depp" class="ingreso"><br>
+      <button type="submit" value="Submit" onclick="enterDatos()" class="registrate">Registrarme</button>
+    </div>
     <script src="./registro.js"></script>
   </body>
 </html>
