--- a/FormularioInputs.html
+++ b/FormularioInputs.html
@@ -10,17 +10,10 @@
       <h1 class="linea">ESENCIALES</h1>
       <div class="cajita">
         <h3>Input Button</h3>
-        <input type="button" onclick="alert('Hello World!')" value="Click Me!">
       </div>
       <br></br>
       <div class="cajita">
         <h3>Input Checkbox</h3>
-        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-        <label for="vehicle1"> I have a bike</label><br>
-        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-        <label for="vehicle2"> I have a car</label><br>
-        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-        <label for="vehicle3"> I have a boat</label>
       </div>
       <br></br>
       <div class="cajita">
@@ -61,25 +54,10 @@
       <br></br>
       <div class="cajita">
         <h3>Input Reset</h3>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit">
-        <input type="reset">
       </div>
       <br></br>
       <div class="cajita">
         <h3>Input Hidden</h3>
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname"><br><br>
-        <input type="hidden" id="custId" name="custId" value="3487">
-        <input type="submit" value="Submit">
-      </div>
-      <div class="cajita">
-        <h3>Input Color</h3>
-        <label for="favcolor">Select your favorite color:</label>
-        <input type="color" id="favcolor" name="favcolor">
       </div>
       <h1 class="lineas">EXTRAS</h1>
     </form>
@@ -90,14 +68,12 @@
 
 
 
-
-<!-- <input type="button"> -->
-<!-- <input type="checkbox"> -->
-<!-- <input type="color"> -->
-<!-- <input type="hidden"> -->
-<!-- <input type="password"> -->
-<!-- <input type="radio"> COMPLETADO-->
-<!-- <input type="reset"> -->
-<!-- <input type="text"> -->
-<!-- <input type="submit"> -->
- <!-- type="text/javascript" -->
+<!--
+<input type="button">
+<input type="checkbox">
+<input type="color">
+<input type="password">
+<input type="radio">
+<input type="reset">
+<input type="submit">
+ type="text/javascript"-->
