--- a/indexII.html
+++ b/indexII.html
@@ -8,10 +8,39 @@
   <body>
     <nav>
       <div class="papa">
-        <h1>¡Bienvenido a la Taberna Gladio!</h1>
-        <h2>¿Por qué no te poones cómodo con un trago a la mano, y te dispones a escuchar acerca de de las armas en la Era Medieval?</h2>
+        <p> <img class="gladio" src="./alive2021/Escudo.jpg" alt="Logo"> </p>
+        <h1 class="bienvenida">¡BIENDVENIDO<span class="nombre">fulanito</span>! A LA TABERNA GLADIO</h1>
+        <h2 class="invitacion">¿Por qué no te pones cómodo con un trago a la mano, y te dispones a escuchar acerca de de las armas en la Era Medieval, y te diviertes?</h2>
       </div>
     </nav>
+    <main>
+      <section class="diseño">
+        <h1 class="titulos">Información</h1>
+        <div>
+          <div style="display:inline-block; margin-left:20px;">
+            <img class="imgs" src="https://i.pinimg.com/564x/04/f6/7d/04f67ddf0d23fd83b42fc0f4ec52d918.jpg" alt="Espada" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/564x/36/38/bc/3638bc36170bf801304ccd17128a7580.jpg" alt="Daga" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/236x/7e/dd/69/7edd69c697434787b63e848594cf7d4b.jpg" alt="Arco" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/236x/41/0a/0e/410a0e353e48d05d0c7ad0cf24862add.jpg" alt="Daga" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/236x/72/23/06/72230676a4f1e15ef9e8a03481f180cd.jpg" alt="Ropa" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/236x/06/1f/3d/061f3d016dcd8b03406eb692c160c9a3.jpg" alt="Ballesta" width="200" height="150">
+          </div>
+        </div>
+      </section>
+      <section class="diseño">
+        <h1 class="titulos">Videos</h1>
+        <!-- https://youtu.be/qWo7zzrDqEU
+        https://youtu.be/TEktwaAsv_Y
+        https://youtu.be/qpMnSO43MvQ
+        https://youtu.be/xuqZF1ofkzg -->
+      </section>
+      <section class="diseño">
+        <h1 class="titulos">Películas y libros</h1>
+      </section>
+      <article class="diseño">
+        <h1 class="titulos">Test</h1>
+      </article>
+    </main>
   </body>
 </html>
 <!-- ESPADA:
