--- a/Historias de Tuaka.html
+++ b/Historias de Tuaka.html
@@ -6,12 +6,13 @@
     <title>Historias de Tuaka</title>
     <!-- Modificar ruta -->
     <link rel="stylesheet" href="./Historias de Tuaka.css">
+    <script src="./Historias de Tuaka.js"></script>
   </head>
   <body class="fondo" background = "https://us.123rf.com/450wm/ke77kz/ke77kz1509/ke77kz150900126/45948150-viejo-fondo-de-papel-para-el-dise%C3%B1o-natural-de-la-textura-de-papel-viejo-.jpg?ver=6">
     <img class="trave" src="https://icon-library.com/images/longsword-icon/longsword-icon-17.jpg">
     <img class="t-banner" src="https://www.pngix.com/pngfile/big/207-2075744_fondo-pergamino-png-fondos-de-pergamino-png-transparent.png">
 
-    <a target="_blank" href= ""><button class="t-1" type="button" name="button">Dewr</button></a>
+    <a href="file:///C:/Users/Admin/Desktop/alive2021/Dewr.html"><button class="t-1" type="button" name="button">Dewr</button></a>
     <button class="t-2" type="button" name="button">La Amenaza</button>
     <button class="t-3" type="button" name="button">El Amanecer</button>
     <div class="title">
