--- a/Dewr.html
+++ b/Dewr.html
@@ -11,5 +11,23 @@
 <body class="back" background = "https://us.123rf.com/450wm/ke77kz/ke77kz1509/ke77kz150900126/45948150-viejo-fondo-de-papel-para-el-dise%C3%B1o-natural-de-la-textura-de-papel-viejo-.jpg?ver=6">
   <a class="volver" href="./Historias de Tuaka.html"><img class="vo" src="https://images.vexels.com/media/users/3/217199/isolated/preview/209e1328ce53be3d650aaa0a0c26c602-flecha-negra-simple-by-vexels.png">Volver a la entrada</a>
   <img class="name" src="https://freepngimg.com/thumb/scroll/4-2-scroll-png.png">
+  <h2 class="libr">Dewr</h2>
   <img class="where" src="https://i.pinimg.com/originals/a4/59/92/a45992a6cefe24031501cf7f9642f6a8.png">
+  <div class="parr">
+    <p>Aquí es la Aldea de Tawhito, capital de la Isla de Tuaka, ubicada en el Reino de Maisha.</p>
+    <p>Estamos en la época de esclavitud en Tawhito.</p>
+  </div>
+
+  <div style="display: inline-block;">
+    <button id="pers" onclick="perso" class="pes" type="button" name="button">Ver a los personajes</button>
+    <img class="jinn" src="https://cdn.pixabay.com/photo/2018/03/30/11/38/silhouette-3275161_960_720.png">
+    <div id="persModal" class="modalPer">
+      <div class="persContenido">
+        <span class="close" onclick="ocultarPers();"></span>
+        <p>Nant Dewr</p>
+      </div>
+    </div>
+  </div>
+
+  <img class="map" src="https://spark.adobe.com/page/vtXvUrmFOlA8V/images/89f516cb-cf5b-4901-af9e-9e2ca4bd238d.jpg?asset_id=fc4bc698-659a-4a09-a399-8e007b836140&img_etag=%22aa1d1153fed89e0e594041490fc4cd17%22&size=2560">
 </body>
