--- a/Historias de Tuaka.html
+++ b/Historias de Tuaka.html
@@ -12,7 +12,7 @@
     <img class="trave" src="https://icon-library.com/images/longsword-icon/longsword-icon-17.jpg">
     <img class="t-banner" src="https://www.pngix.com/pngfile/big/207-2075744_fondo-pergamino-png-fondos-de-pergamino-png-transparent.png">
 
-    <a href="file:///C:/Users/Admin/Desktop/alive2021/Dewr.html"><button class="t-1" type="button" name="button">Dewr</button></a>
+    <a href="file:///C:/Users/Admin/Desktop/alive2021/Dewr.html"><button id="primer" class="t-1" type="button" name="button">Dewr</button></a>
     <button class="t-2" type="button" name="button">La Amenaza</button>
     <button class="t-3" type="button" name="button">El Amanecer</button>
     <div class="title">
