--- a/indexII.html
+++ b/indexII.html
@@ -21,21 +21,26 @@
             <img class="imgs" src="https://i.pinimg.com/564x/04/f6/7d/04f67ddf0d23fd83b42fc0f4ec52d918.jpg" alt="Espada" width="200" height="150">
             <img class="imgs" src="https://i.pinimg.com/564x/36/38/bc/3638bc36170bf801304ccd17128a7580.jpg" alt="Daga" width="200" height="150">
             <img class="imgs" src="https://i.pinimg.com/236x/7e/dd/69/7edd69c697434787b63e848594cf7d4b.jpg" alt="Arco" width="200" height="150">
-            <img class="imgs" src="https://i.pinimg.com/236x/41/0a/0e/410a0e353e48d05d0c7ad0cf24862add.jpg" alt="Daga" width="200" height="150">
             <img class="imgs" src="https://i.pinimg.com/236x/72/23/06/72230676a4f1e15ef9e8a03481f180cd.jpg" alt="Ropa" width="200" height="150">
             <img class="imgs" src="https://i.pinimg.com/236x/06/1f/3d/061f3d016dcd8b03406eb692c160c9a3.jpg" alt="Ballesta" width="200" height="150">
+            <img class="imgs" src="https://i.pinimg.com/564x/7a/f0/5a/7af05a7ff62ef830fcece49391fddc5b.jpg" alt="Escudo" width="200" height="150">
           </div>
         </div>
       </section>
       <section class="diseño">
         <h1 class="titulos">Videos</h1>
-        <!-- https://youtu.be/qWo7zzrDqEU
-        https://youtu.be/TEktwaAsv_Y
+        <!--
+        https://youtu.be/DqcqS2TPBRo
         https://youtu.be/qpMnSO43MvQ
-        https://youtu.be/xuqZF1ofkzg -->
+        https://youtu.be/xuqZF1ofkzg
+        https://youtu.be/Bllp-4ImUJ0
+        https://youtu.be/rUWSUkHZqOA-->
       </section>
       <section class="diseño">
-        <h1 class="titulos">Películas y libros</h1>
+        <h1 class="titulos">Libros</h1>
+      </section>
+      <section class="diseño">
+        <h1 class="titulos">Películas</h1>
       </section>
       <article class="diseño">
         <h1 class="titulos">Test</h1>
@@ -47,4 +52,5 @@
 gladio en latín
 khmali en gregoriano
 spada en corso -->
-<!-- <img class="sword" src="https://i.pinimg.com/564x/a9/0e/e9/a90ee9f7dd3fb5d173b274133fa1b5e6.jpg" alt="Sword"> -->
+<!-- <img class="sword" src="https://i.pinimg.com/564x/a9/0e/e9/a90ee9f7dd3fb5d173b274133fa1b5e6.jpg" alt="Sword">
+https://i.pinimg.com/564x/58/b9/69/58b969d0a3c185535882b5688f456e2f.jpg-->
