--- a/Dewr.html
+++ b/Dewr.html
@@ -9,6 +9,7 @@
     <script src="./Dewr.js"></script>
 </head>
 <body class="back" background = "https://us.123rf.com/450wm/ke77kz/ke77kz1509/ke77kz150900126/45948150-viejo-fondo-de-papel-para-el-dise%C3%B1o-natural-de-la-textura-de-papel-viejo-.jpg?ver=6">
+  <img class="rain" src="https://i.pinimg.com/originals/91/95/f4/9195f4dd1b69f90038f627c8af422429.gif">
   <a class="volver" href="./Historias de Tuaka.html"><img class="vo" src="https://images.vexels.com/media/users/3/217199/isolated/preview/209e1328ce53be3d650aaa0a0c26c602-flecha-negra-simple-by-vexels.png">Volver a la entrada</a>
   <img class="name" src="https://freepngimg.com/thumb/scroll/4-2-scroll-png.png">
   <h2 class="libr">Dewr</h2>
@@ -19,15 +20,39 @@
   </div>
 
   <div style="display: inline-block;">
-    <button id="pers" onclick="perso" class="pes" type="button" name="button">Ver a los personajes</button>
-    <img class="jinn" src="https://cdn.pixabay.com/photo/2018/03/30/11/38/silhouette-3275161_960_720.png">
+    <button id="pers" onclick="perso()" class="pes" type="button" name="button">Personajes</button>
+    <img class="perr" src="https://images.vexels.com/media/users/3/167809/isolated/preview/c3fab5c5a9996b0f00ed1986c0559fd4-caballero-placa-armadura-espada-silueta-by-vexels.png">
     <div id="persModal" class="modalPer">
       <div class="persContenido">
-        <span class="close" onclick="ocultarPers();"></span>
-        <p>Nant Dewr</p>
+        <span class="cerrarPers" onclick="ocultarPers();">Salir</span>
+        <p class="prs">Nant Dewr</p>
+        <p class="DePrs"></p>
       </div>
     </div>
   </div>
 
-  <img class="map" src="https://spark.adobe.com/page/vtXvUrmFOlA8V/images/89f516cb-cf5b-4901-af9e-9e2ca4bd238d.jpg?asset_id=fc4bc698-659a-4a09-a399-8e007b836140&img_etag=%22aa1d1153fed89e0e594041490fc4cd17%22&size=2560">
+  <div style="display: inline-block;">
+    <button id="accs" onclick="accesor()" class="acce" type="button" name="button">Armas y otros accesorios</button>
+    <img class="spee" src="https://cdn.pixabay.com/photo/2013/07/13/13/40/sword-161331_960_720.png">
+    <img class="arr" src="https://cdn.pixabay.com/photo/2013/07/12/16/28/arrow-150966_960_720.png">
+    <div id="acceModal" class="modalAcce">
+      <div class="acceContenido">
+        <span class="close" onclick="ocultarAcce();"></span>
+        <p>...</p>
+      </div>
+    </div>
+  </div>
+
+  <div style="display: inline-block;">
+    <button id="galr" onclick="galer()" class="gal" type="button" name="button">Lugares importantes</button>
+    <img class="jinn" src="https://cdn.pixabay.com/photo/2018/03/30/11/38/silhouette-3275161_960_720.png">
+    <div id="galModal" class="modalGal">
+      <div class="galContenido">
+        <span class="close" onclick="ocultarGal();"></span>
+        <p>...</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- <img class="map" src="https://spark.adobe.com/page/vtXvUrmFOlA8V/images/89f516cb-cf5b-4901-af9e-9e2ca4bd238d.jpg?asset_id=fc4bc698-659a-4a09-a399-8e007b836140&img_etag=%22aa1d1153fed89e0e594041490fc4cd17%22&size=2560"> -->
 </body>
