--- a/Historias de Tuaka.html
+++ b/Historias de Tuaka.html
@@ -13,7 +13,7 @@
     <img class="t-banner" src="https://www.pngix.com/pngfile/big/207-2075744_fondo-pergamino-png-fondos-de-pergamino-png-transparent.png">
 
     <a href="file:///C:/Users/Admin/Desktop/alive2021/Dewr.html"><button id="primer" class="t-1" type="button" name="button">Dewr</button></a>
-    <button class="t-2" type="button" name="button">La Amenaza</button>
+    <a href="file:///C:/Users/Admin/Desktop/alive2021/La%20amenaza.html"><button id="segundo" class="t-2" type="button" name="button">La Amenaza</button></a>
     <button class="t-3" type="button" name="button">El Amanecer</button>
     <div class="title">
       <h1 align="center">Historias de Tuaka</h1>
