--- a/indexII.html
+++ b/indexII.html
@@ -29,12 +29,16 @@
       </section>
       <section class="diseño">
         <h1 class="titulos">Videos</h1>
+        <div style="display:inline-block; margin-left:10px">
+
+        </div>
         <!--
-        https://youtu.be/DqcqS2TPBRo
-        https://youtu.be/qpMnSO43MvQ
-        https://youtu.be/xuqZF1ofkzg
-        https://youtu.be/Bllp-4ImUJ0
-        https://youtu.be/rUWSUkHZqOA-->
+        https://youtu.be/xuqZF1ofkzg   - Espada grande desde una cadena-
+        https://youtu.be/qpMnSO43MvQ   - Espada en miniatura-
+        https://youtu.be/nMZW5NKb0wk   - Funda de madera para espada medieval-
+        https://youtu.be/1c6b5FtMcDQ   - Funda para daga o cuchillo-
+        https://youtu.be/DqcqS2TPBRo   - Arco de supervivencia-
+        https://youtu.be/rUWSUkHZqOA   - Hacer un escudo en casa- -->
       </section>
       <section class="diseño">
         <h1 class="titulos">Libros</h1>
