--- a/Dewr.html
+++ b/Dewr.html
@@ -25,8 +25,97 @@
     <div id="persModal" class="modalPer">
       <div class="persContenido">
         <span class="cerrarPers" onclick="ocultarPers();">Salir</span>
-        <p class="prs">...</p>
-        <p class="DePrs">...</p>
+        <div class="linea1">
+          <div style="float: left" class="prs">
+            <h4>Nant Dewr</h4>
+            <img class="imgN" src="">
+          </div>
+          <div style="float: left" class="prs2">
+            <h4>Airk Dewr</h4>
+            <img class="imgAr" src="">
+          </div>
+          <div style="float: left" class="prs3">
+            <h4>Adha Seren</h4>
+            <img class="imgAd" src="">
+          </div>
+          <div style="float: left" class="prs4">
+            <h4>Reka Seren</h4>
+            <img class="imgR" src="">
+          </div>
+          <div style="float: left" class="prs5">
+            <h4>Koha Seren</h4>
+            <img class="imgK" src="">
+          </div>
+        </div>
+
+        <div class="linea2">
+          <div style="float: left" class="prs6">
+            <h4>Samoth Kaitukino</h4>
+            <img class="imgS" src="">
+          </div>
+          <div style="float: left" class="prs7">
+            <h4>Kino Kaitukino</h4>
+            <img class="imgK" src="">
+          </div>
+          <div style="float: left" class="prs8">
+            <h4>Tainong Eneidiau</h4>
+            <img class="imgT" src="">
+          </div>
+          <div style="float: left" class="prs9">
+            <h4>Wuruhi Eneidiau</h4>
+            <img class="imgW" src="">
+          </div>
+          <div style="float: left" class="prs10">
+            <h4>Hoari Eneidiau</h4>
+            <img class="imgH" src="">
+          </div>
+          <div style="float: left" class="prs11">
+            <h4>Taiohi Eneidiau</h4>
+            <img class="imgTa" src="">
+          </div>
+        </div>
+
+        <div class="linea3">
+          <div style="float: left" class="prs12">
+            <h4>Tika Eneidiau</h4>
+            <img class="imgTi" src="">
+          </div>
+          <div style="float: left" class="prs13">
+            <h4>Tohe Eneidiau</h4>
+            <img class="imgTo" src="">
+          </div>
+          <div style="float: left" class="prs14">
+            <h4>Aeto Eneidiau</h4>
+            <img class="imgAe" src="">
+          </div>
+          <div style="float: left" class="prs15">
+            <h4>Manu Eneidiau</h4>
+            <img class="imgM" src="">
+          </div>
+          <div style="float: left" class="prs16">
+            <h4>Marhama Anake</h4>
+            <img class="imgMa" src="">
+          </div>
+          <div style="float: left" class="prs17">
+            <h4>Nakai Rau</h4>
+            <img class="imgNa" src="">
+          </div>
+        </div>
+
+        <div class="linea4">
+          <div style="float: left" class="prs18">
+            <h4>Dynion Dewr</h4>
+            <img class="imgD" src="">
+          </div>
+          <div style="float: left" class="prs19">
+            <h4>Hawlyn Dewr</h4>
+            <img class="imgH" src="">
+          </div>
+          <div style="float: left" class="prs20">
+            <h4>Personajes menos relevantes</h4>
+            <img class="imgTh" src="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -38,7 +127,28 @@
     <div id="acceModal" class="modalAcce">
       <div class="acceContenido">
         <span class="cerrarAcce" onclick="ocultarAcce();">Salir</span>
-        <p>...</p>
+        <div class="line1">
+          <div style="float: left" class="arm">
+            <h4>Caparazones</h4>
+            <img class="imgCap" src="">
+          </div>
+          <div style="float: left" class="arm2">
+            <h4>Brazales</h4>
+            <img class="imgBra" src="">
+          </div>
+          <div style="float: left" class="arm3">
+            <h4>Armas de Tawhito</h4>
+            <img class="imgArmT" src="">
+          </div>
+          <div style="float: left" class="arm4">
+            <h4>Armas de los Kaitukino</h4>
+            <img class="imgArmM" src="">
+          </div>
+          <div style="float: left" class="arm5">
+            <h4>Armas de los Eneidiau</h4>
+            <img class="imgArmE" src="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -49,7 +159,28 @@
     <div id="galModal" class="modalGal">
       <div class="galContenido">
         <span class="close" onclick="ocultarGal();">Salir</span>
-        <p>...</p>
+        <div class="lin1">
+          <div style="float: left" class="lug">
+            <h4>Tawhito</h4>
+            <img class="imgTaw" src="">
+          </div>
+          <div style="float: left" class="lug2">
+            <h4>Borde</h4>
+            <img class="imgBor" src="">
+          </div>
+          <div style="float: left" class="lug3">
+            <h4>Cañadas</h4>
+            <img class="imgCañ" src="">
+          </div>
+          <div style="float: left" class="lug4">
+            <h4>Tierras Áridas</h4>
+            <img class="imgTA" src="">
+          </div>
+          <div style="float: left" class="lug5">
+            <h4>Montañas de Tuaka</h4>
+            <img class="imgMT" src="">
+          </div>
+        </div>
       </div>
     </div>
   </div>
