--- a/PROYECTO LE MONDE/CART.html
+++ b/PROYECTO LE MONDE/CART.html
@@ -43,7 +43,8 @@
       <div id="products">
 
       </div>
-      <p id="total"></p>
+      <p id="total" class="letraverde"></p>
+      <button onclick="clearCart()" class="botonCartClear">Clear</button>
     </div>
   </div>
   <script src="./SIGN UP.js"></script>
