--- a/pruebas.html
+++ b/pruebas.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Pruebas</h1>
     <span id="aqui"></span>
-
+<iframe src="https://open.spotify.com/embed/playlist/4Xe6P3z3ezA0JiiKvLvn5S" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/artist/31v59fa93L8stt0FQTn8IU" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe src="https://open.spotify.com/embed/playlist/45qV2Cflinl8JS7hfI3jlV" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
