--- a/paginaInicio.html
+++ b/paginaInicio.html
@@ -21,23 +21,23 @@
     <div class="playlists">Playlist predeterminadas</div>
     <p class="description">Ajusta los temporizadores para que suene la playlist en cuanto se acabe el tiempo</p>
     <div class="musica">
-      <iframe class="rolitas" src="https://open.spotify.com/embed/playlist/4Xe6P3z3ezA0JiiKvLvn5S"  frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-      <iframe class='study' src="https://open.spotify.com/embed/playlist/5NzHPp3paFbMZuKxf1uqkR" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <iframe id="manana" class="rolitas" src="https://open.spotify.com/embed/playlist/4Xe6P3z3ezA0JiiKvLvn5S"  frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <iframe id="study" class='study' src="https://open.spotify.com/embed/playlist/5NzHPp3paFbMZuKxf1uqkR" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       <iframe id="alive" class='alive' src="https://open.spotify.com/embed/playlist/45qV2Cflinl8JS7hfI3jlV" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
     <div class="timers">
-      <div class="timer1"><input  class="horas1" type='text'></input><p>hrs</p>
-                          <input class="minutos1"type='text'></input><p>min</p>
-                          <input class="seg1" type='text'></input><p>seg</p></div>
-      <div class="timer2"><input class="horas2" type='text'></input><p>hrs</p>
-                           <input class="min2"type='text'></input><p>min</p>
-                           <input class="seg2" type='text'></input><p>seg</p></div>
+      <div class="timer1"><input id="horas1" class="horas1" type='text'></input><p>hrs</p>
+                          <input id="minutos1" class="minutos1"type='text'></input><p>min</p>
+                          <input id="segundos1" class="seg1" type='text'></input><p>seg</p></div>
+      <div class="timer2"><input id="horas2" class="horas2" type='text'></input><p>hrs</p>
+                           <input id="minutos2" class="min2"type='text'></input><p>min</p>
+                           <input id="segundos2" class="seg2" type='text'></input><p>seg</p></div>
       <div class="timer3"><input id="horas" class="horas3" type='text' value=''></input><p>hrs</p>
                            <input id="minutos" class="min3"type='text' value=''></input><p>min</p>
                            <input id="segundos" class="seg3" type='text' value=''></input><p>seg</p></div>
     </div>
-    <div class="botones"><button  type="button" name="button">COMIENZA</button>
-                        <button  type="button" name="button">COMIENZA</button>
+    <div class="botones"><button onclick="comienza1()" type="button" name="button">COMIENZA</button>
+                        <button onclick="comienza2()" type="button" name="button">COMIENZA</button>
                         <button onclick="comienza()"  type="button" name="button">COMIENZA</button>
     </div>
   <script type="text/javascript" src="paginaInicio.js" ></script>
