--- a/PROYECTO LE MONDE/COLLECTION.html
+++ b/PROYECTO LE MONDE/COLLECTION.html
@@ -1100,7 +1100,7 @@
     <a href="CART.html"><img class="cart" src="Cart.png" /></a>
   </div>
   <script src="SIGN UP.js"></script>
-  <script src="cart.js"></script>
+  <script src="collection.js"></script>
 
 </body>
 
