--- a/PROYECTO LE MONDE/CART.html
+++ b/PROYECTO LE MONDE/CART.html
@@ -13,7 +13,7 @@
   
 </head>
 
-<body onload="cargarNombre()" class="supercool">
+<body onload="cargarProductos()" class="supercool">
   <nav class="navbar">
     <div>
       <a class="letra1" href="HOME.html">home</a>
@@ -37,17 +37,18 @@
         <h2 class="letraverde">My shopping cart</h2>
 
       </div>
+      
+      <a class="shop" href="COLLECTION.html"> Go to COLLECTION</a>
       <p id="anuncioShopingCart" class="letra1-1"> Your cart it's empty</p>
       <br> </br>
-      <a class="shop" href="COLLECTION.html"> Start shopping</a>
-      <div id="products">
-
+      <div id="products" style="display: flex;">
       </div>
+      <div>
       <p id="total" class="letraverde"></p>
       <button onclick="clearCart()" class="botonCartClear">Clear</button>
-    </div>
+       </div>
   </div>
-  <script src="./SIGN UP.js"></script>
+  
   <script src="./cart.js"></script>
 </body>
 
